--- a/app/views/sec_pdf/footer.html
+++ b/app/views/sec_pdf/footer.html
@@ -2,9 +2,9 @@
   <head>
     <style type="text/css">
       body {
-        color: #000000;
+        color: #808080;
         font-family: Courier;
-        font-size: 12px;
+        font-size: 10px;
       }
       a, a:visited, a b {
         color: #378DC1;
@@ -25,7 +25,7 @@
   <body>
       <hr>
       <div style="text-align: center" >
-        This security report was created by <a href="https://www.versioneye.com">VersionEye</a> - automated version and securtiy analysis for open source software and custom developments
+        This report was created by <a href="https://www.versioneye.com">VersionEye</a> - automated securtiy analysis for open source software and custom developments
       </div>
   </body>
 </html>
