--- a/app/views/sec_pdf/sec_pdf.html.erb
+++ b/app/views/sec_pdf/sec_pdf.html.erb
@@ -63,6 +63,9 @@
       .small{
         font-size: 10px;
       }
+      thead { display: table-header-group }
+      tfoot { display: table-row-group }
+      tr { page-break-inside: avoid }
     </style>
   </head>
   <body>
