Show security export in dependency tab

--- a/app/views/user/projects/helpers/_show_dependencies.html.erb
+++ b/app/views/user/projects/helpers/_show_dependencies.html.erb
@@ -4,6 +4,7 @@
       <span style="font-weight: bold">Exports:</span>
       <%= link_to 'licenses.pdf', lwl_export_user_project_path( @project.ids ) %> |
       <%= link_to 'licenses.csv', lwl_csv_export_user_project_path( @project.ids ) %>
+      <% if security_available?( @project ) %> | <%= link_to 'security.pdf', sec_export_user_project_path( @project.ids ) %><% end %>
     </div>
   <% end %>
 
