--- a/app/views/version_pdf/version_pdf.html.erb
+++ b/app/views/version_pdf/version_pdf.html.erb
@@ -71,7 +71,7 @@
   <body>
     <div class="container">
 
-      <h1>Security Report for <%= project.name %></h1>
+      <h1>Version Report for <%= project.name %></h1>
 
       <p>
         <b>Date:</b> <%= DateTime.now.strftime("%b %d, %Y - %I:%m %p") %> <br/>
@@ -86,19 +86,25 @@
         <table class="list">
           <thead>
             <tr>
+              <td class="left">Status</td>
               <td class="left">Component</td>
-              <td class="left">Version</td>
-              <td class="left">Sec. Status</td>
+              <td class="left">Version Used</td>
+              <td class="left">Newest Version</td>
             </tr>
           </thead>
           <tbody>
-            <% [:vulnerable, :ok].each do |key| %>
-              <% project.sec_pdf_list[key].each do |dep| %>
+            <% [:ok, :outdated, :unknown].each do |key| %>
+              <% project.ver_pdf_list[key].each do |dep| %>
                 <% cell_style = "" %>
-                <% if key.to_s.eql?("vulnerable") %>
+                <% if key.to_s.eql?("outdated") %>
                   <% cell_style = "font-weight: bold; color: red;" %>
+                <% elsif key.to_s.eql?("unknown") %>
+                  <% cell_style = "color: orange;" %>
                 <% end %>
                 <tr>
+                  <td class="left" style="<%= cell_style %>">
+                    <%= dep[:status].to_s %>
+                  </td>
                   <td class="left" style="<%= cell_style %>">
                     (<%= dep[:language] %>) <%= dep[:component] %>
                     <% if dep[:group_id] %>
@@ -114,7 +120,9 @@
                       <%= dep[:version].to_s.strip %>
                     <% end %>
                   </td>
-                  <td class="left" style="<%= cell_style %>"> <%= key.to_s %> </td>
+                  <td class="left" style="<%= cell_style %>">
+                    <%= dep[:newest].to_s.strip %>
+                  </td>
                 </tr>
               <% end %>
             <% end %>
@@ -134,22 +142,31 @@
               <thead>
                 <tr>
                   <td class="left">Status</td>
+                  <td class="left">Status</td>
                   <td class="left">Component</td>
                   <td class="left">Version</td>
                 </tr>
               </thead>
               <tbody>
-                <% [:vulnerable, :ok].each do |key| %>
-                  <% project.sec_pdf_list[key].each do |dep| %>
+                <% [:ok, :outdated, :unknown].each do |key| %>
+                  <% project.ver_pdf_list[key].each do |dep| %>
+                    <% cell_style = "" %>
+                    <% if key.to_s.eql?("outdated") %>
+                      <% cell_style = "font-weight: bold; color: red;" %>
+                    <% elsif key.to_s.eql?("unknown") %>
+                      <% cell_style = "color: orange;" %>
+                    <% end %>
                     <tr>
-                      <td class="left"> <%= key.to_s %> </td>
-                      <td class="left">
+                      <td class="left" style="<%= cell_style %>">
+                        <%= dep[:status].to_s %>
+                      </td>
+                      <td class="left" style="<%= cell_style %>">
                         (<%= dep[:language] %>) <%= dep[:component] %>
                         <% if dep[:group_id] %>
                           <br/> <span class='small'>GroupId: <%= dep[:group_id] %></span>
                         <% end %>
                       </td>
-                      <td class="left">
+                      <td class="left" style="<%= cell_style %>">
                         <% if dep[:version].to_s.strip.match(/\A\:path/) %>
                           :path
                         <% elsif dep[:version].to_s.strip.match(/\A\:git/) %>
@@ -158,48 +175,15 @@
                           <%= dep[:version].to_s.strip %>
                         <% end %>
                       </td>
+                      <td class="left" style="<%= cell_style %>">
+                        <%= dep[:newest].to_s.strip %>
+                      </td>
                     </tr>
                   <% end %>
                 <% end %>
               </tbody>
             </table>
           </div>
-        <% end %>
-      <% end %>
-
-      <% if !project.sec_pdf_list[:vulnerable].to_a.empty? %>
-        <% project.sec_pdf_list[:vulnerable].each do |dep| %>
-          <h3>(<%= dep[:language] %>) <%= dep[:component] %> : <%= dep[:version] %></h3>
-          <% dep[:sv_ids].each do |sv_id| %>
-            <% sv = SecurityVulnerability.find sv_id %>
-            <% if sv %>
-              <div><%= sv.summary %></div>
-              <% sv.links.values.each do |link| %>
-                <div><%= link %></div>
-              <% end %>
-              <hr/>
-            <% end %>
-          <% end %>
-        <% end %>
-      <% end %>
-
-      <% if children && !children.empty? %>
-        <% children.each do |project| %>
-          <% if !project.sec_pdf_list[:vulnerable].to_a.empty? %>
-            <% project.sec_pdf_list[:vulnerable].each do |dep| %>
-              <h3>(<%= dep[:language] %>) <%= dep[:component] %> : <%= dep[:version] %></h3>
-              <% dep[:sv_ids].each do |sv_id| %>
-                <% sv = SecurityVulnerability.find sv_id %>
-                <% if sv %>
-                  <div><%= sv.summary %></div>
-                  <% sv.links.values.each do |link| %>
-                    <div><%= link %></div>
-                  <% end %>
-                  <hr/>
-                <% end %>
-              <% end %>
-            <% end %>
-          <% end %>
         <% end %>
       <% end %>
 
