--- a/app/views/products/_product_show_description.html.erb
+++ b/app/views/products/_product_show_description.html.erb
@@ -30,11 +30,7 @@
   <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
     <div class="ad_prod_desc" style="padding-top: 15px;">
       <div id='div-gpt-ad-1407836245189-0'>
-        <script type='text/javascript'>
-          googletag.cmd.push(function() {
-            googletag.pubads().display('/53015287/versioneye.com_d_728x90_1', [728, 90], 'div-gpt-ad-1407836245189-0');
-          });
-        </script>
+        <script data-cfasync="false" type="text/javascript" src="//www.eboundservices.com/ads/728x90_responsive.js"></script>
       </div>
     </div>
   <% end %>
