Exchange Ad provider

--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -2,11 +2,7 @@
 <div class="col-md-3" >
   <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
     <div id='div-gpt-ad-1407836165464-0'>
-      <script type='text/javascript'>
-        googletag.cmd.push(function() {
-          googletag.pubads().display('/53015287/versioneye.com_d_160x600_1', [160, 600], 'div-gpt-ad-1407836165464-0');
-        });
-      </script>
+      <script data-cfasync="false" type="text/javascript" src="//www.eboundservices.com/ads/160x600_responsive.js"></script>
     </div>
   <% end %>
 </div>
