--- a/app/views/keywords/show.html.erb
+++ b/app/views/keywords/show.html.erb
@@ -7,7 +7,7 @@
 
         <%= pluralize(@products.total_entries, 'software library') %> tagged with the keyword <span style="font-weight: bold;"><%= params[:id] %></span>
 
-        <div style="padding-top: 30px;">
+        <div style="padding-top: 30px; padding-bottom: 30px;">
           <% if @languages && !@languages.empty? && !@lang.nil? %>
             <% @langs = @lang.split(",") %>
             <% @languages.each do |lang| %>
@@ -22,7 +22,9 @@
           <% end %>
         </div>
 
-        <%= render 'shared/affiliate/index' %>
+        <div id='div-gpt-ad-1407836165464-0'>
+          <script data-cfasync="false" type="text/javascript" src="//www.eboundservices.com/ads/160x600_responsive.js"></script>
+        </div>
 
       </div>
       <div class="col-md-8 col-xs-12 pull-left">
