--- a/app/views/products/_product_show_description.html.erb
+++ b/app/views/products/_product_show_description.html.erb
@@ -28,11 +28,14 @@
   </div>
 
   <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
-    <div class="ad_prod_desc" style="padding-top: 15px;">
-      <div id='div-gpt-ad-1407836245189-0'>
-        <script data-cfasync="false" type="text/javascript" src="//www.eboundservices.com/ads/728x90_responsive.js"></script>
-      </div>
-    </div>
+    <!-- veye_hori -->
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-9602950531496152"
+         data-ad-slot="9319276825"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   <% end %>
 
 <% end %>
