--- a/app/views/products/_product_show_twitter_follow.html.erb
+++ b/app/views/products/_product_show_twitter_follow.html.erb
@@ -6,7 +6,13 @@
 <% end %>
 
 <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
-  <div id='div-gpt-ad-1407836165464-0'>
-    <script data-cfasync="false" type="text/javascript" src="//www.eboundservices.com/ads/160x600_responsive.js"></script>
-  </div>
+  <!-- veye_responsive_ad -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-9602950531496152"
+       data-ad-slot="1656409224"
+       data-ad-format="auto"></ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 <% end %>
