--- a/app/views/users/_navi.html.erb
+++ b/app/views/users/_navi.html.erb
@@ -56,7 +56,12 @@
     <% end %>
 
     <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
-      <div id='div-gpt-ad-1407836165464-0'>
-        <script data-cfasync="false" type="text/javascript" src="//www.eboundservices.com/ads/160x600_responsive.js"></script>
-      </div>
+      <!-- veye_hori -->
+      <ins class="adsbygoogle"
+           style="display:inline-block;width:728px;height:90px"
+           data-ad-client="ca-pub-9602950531496152"
+           data-ad-slot="9319276825"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     <% end %>
