--- a/app/views/organisations/index.html.erb
+++ b/app/views/organisations/index.html.erb
@@ -2,11 +2,12 @@
 <div class="col-md-3" >
 
   <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
-    <!-- veye_hori -->
+    <!-- veye_responsive_ad -->
     <ins class="adsbygoogle"
-         style="display:inline-block;width:728px;height:90px"
+         style="display:block"
          data-ad-client="ca-pub-9602950531496152"
-         data-ad-slot="9319276825"></ins>
+         data-ad-slot="1656409224"
+         data-ad-format="auto"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
