--- a/app/views/user/projects/index.html.erb
+++ b/app/views/user/projects/index.html.erb
@@ -2,6 +2,18 @@
 
 <div class="col-md-3 navbar_container" >
 
+  <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
+    <!-- veye_responsive_ad -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-9602950531496152"
+         data-ad-slot="1656409224"
+         data-ad-format="auto"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  <% end %>
+
 </div>
 
 <div class="col-md-9">
