--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -4,7 +4,7 @@
   <% title @author.name %>
 
   <div class="row">
-    <div class="col-md-3 col-xs-12 pull-left">
+    <div class="col-md-3 col-xs-12 pull-left sticky">
 
       <%=  gravatar_image_tag( @author.email, :alt => @author.name, :class => 'round12', :gravatar => { :size => 200, :default => "#{Settings.instance.server_url}/profile_icon.png" }) %><br/>
       <% if !@author.homepage.to_s.empty? %>
@@ -23,17 +23,7 @@
         </div>
       <% end %>
 
-      <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
-        <!-- veye_responsive_ad -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-9602950531496152"
-             data-ad-slot="1656409224"
-             data-ad-format="auto"></ins>
-        <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      <% end %>
+      <%= render partial: "/shared/ad_vert_resp" %>
 
     </div>
     <div class="col-md-8 col-xs-12 pull-left">
