--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,17 +1,7 @@
 <% title 'Notifications' %>
 
-<div class="col-md-3" >
-  <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
-    <!-- veye_responsive_ad -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-9602950531496152"
-         data-ad-slot="1656409224"
-         data-ad-format="auto"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  <% end %>
+<div class="col-md-3 sticky" >
+  <%= render partial: "/shared/ad_vert_resp" %>
 </div>
 <div class="col-md-9">
 
