--- a/app/views/products/_product_show_twitter_follow.html.erb
+++ b/app/views/products/_product_show_twitter_follow.html.erb
@@ -5,14 +5,4 @@
   </div>
 <% end %>
 
-<% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
-  <!-- veye_responsive_ad -->
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-client="ca-pub-9602950531496152"
-       data-ad-slot="1656409224"
-       data-ad-format="auto"></ins>
-  <script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-<% end %>
+<%= render partial: "/shared/ad_vert_resp" %>
