--- a/app/views/products/_product_show_comments.html.erb
+++ b/app/views/products/_product_show_comments.html.erb
@@ -1,3 +1,8 @@
+
+<div style="padding-top: 10px; padding-bottom: 10px;">
+  <%= render partial: "/shared/ad_hor" %>
+</div>
+
 <% comments = @product.comments %>
 <% if !comments.nil? && !comments.empty? %>
   <div class="box">
