--- a/app/views/products/_product_show_description.html.erb
+++ b/app/views/products/_product_show_description.html.erb
@@ -27,17 +27,6 @@
 
   </div>
 
-  <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
-    <div class="ad_prod_desc" style="padding-top: 15px;">
-      <!-- veye_hori -->
-      <ins class="adsbygoogle"
-           style="display:inline-block;width:728px;height:90px"
-           data-ad-client="ca-pub-9602950531496152"
-           data-ad-slot="9319276825"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-  <% end %>
+  <%= render partial: "/shared/ad_hor" %>
 
 <% end %>
