--- a/app/views/user/projects/helpers/_create_from_url.html.erb
+++ b/app/views/user/projects/helpers/_create_from_url.html.erb
@@ -2,10 +2,11 @@
 <div style="padding-bottom: 20px;">
   <b>Creating a new project can take a couple of seconds. Please be patient.</b>
   <br/><br/>
-  Supported files are pom.xml, dependency.gradle, build.sbt,
+  Supported files are pom.xml, *.gradle, build.sbt,
   Gemfile, Gemfile.lock,
-  requirements.txt, setup.py,
-  package.json, composer.json, composer.lock, Podfile, Podfile.lock and project.clj
+  requirements.txt, setup.py, biicode.conf, Berksfile.lock, metadata.rb,
+  project.json, *.nuspec, packages.config, *.csproj, Cargo.toml, Cargo.lock,
+  package.json, composer.json, composer.lock, bower.json, Podfile, Podfile.lock and project.clj
 </div>
 
 <%= form_for [:user, @project], :html => {:multipart => true, :accept => "text/xml" } do |f|  %>
