--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -23,7 +23,9 @@
         </div>
       <% end %>
 
-      <%= render partial: "/shared/ad_vert_resp" %>
+      <div style="padding-top: 15px;">
+        <%= render partial: "/shared/ad_vert_resp" %>
+      </div>
 
     </div>
     <div class="col-md-8 col-xs-12 pull-left">
