--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+  <div style="padding-top: 15px;">
+    <%= render partial: "/shared/ad_vert_resp" %>
+  </div>
+
 </div>
 
 <div class="col-md-9 col-mx-12" >
