Update description on plan page

--- a/app/views/organisations/plan.html.erb
+++ b/app/views/organisations/plan.html.erb
@@ -73,6 +73,12 @@
           <b>Project</b>: A VersionEye project can contain one or multiple project files, like for example a Gemfile, pom.xml and so on.
         </li>
         <li style="padding-bottom: 10px;">
+          <b>Private Project</b>: A private project is a VersionEye project based on a file in a private GitHub/Bitbucket repository. Projects created through the VersionEye API are considered as private as well.
+        </li>
+        <li style="padding-bottom: 10px;">
+          <b>OS Project</b>: A OS (Open Source) project is a VersionEye project based on a file in a public GitHub/Bitbucket repository.
+        </li>
+        <li style="padding-bottom: 10px;">
           <b>API calls per hour</b>: The number of HTTP requests per hour you can do to the VersionEye <a href="/api">API</a> depends on your subscription. As higher your subscription plan as more API calls per hour you can do. The API calls are especially important for you if you want to integrate VersionEye into your own tool chain.
         </li>
         <li style="padding-bottom: 10px;">
