Update price description

--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -2,11 +2,9 @@
 
 <div class="col2-left col2-right">
   <p style="padding-top: 30px; margin-bottom: 5px; font-size: 18px;">
-    We only charge a small fee for monitoring project files in GitHub/Bitbucket repositories.
-    VersionEye has a variety of plans to suit everyone's needs. With the free plan you can
-    monitor 1 private and 4 public open source projects. The other plans have always the
-    same number of public &amp; private projects. With the "Beginner" plan for example
-    you can monitor 5 private projects and 5 public projects.<br/>
+    VersionEye has a variety of plans to suit everyone's needs. <br/>
+    All plans are available as yearly subscription as well. If you pay 1 year in advance
+    you get 2 extra projects.
     <br/>
     <b>All of our SaaS plans can be cancelled or changed on a monthly base.</b>
   </p>
@@ -33,6 +31,7 @@
       <li class="pricing_price">€ 7 <span class="pricing_price_sm">/ Month</span></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Projects:</span> 5</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> 5</li>
       <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 100</li>
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_micro', :alignment => ''  } %></li>
     </ul>
@@ -43,6 +42,7 @@
       <li class="pricing_price pricing_recommend">€ 22 <span class="pricing_price_sm">/ Month</span></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Projects:</span> 20</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> 20</li>
       <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 300</li>
       <li class="pricing_feature">PDF Reports</li>
       <li class="pricing_feature">CSV Reports</li>
@@ -55,6 +55,7 @@
       <li class="pricing_price">€ 50 <span class="pricing_price_sm">/ Month</span></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature">Projects: 50</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> 50</li>
       <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 500</li>
       <li class="pricing_feature">PDF Reports</li>
       <li class="pricing_feature">CSV Reports</li>
@@ -70,6 +71,7 @@
       <li class="pricing_price">€ 100 <span class="pricing_price_sm">/ Month</span></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature">Projects: 100</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> 100</li>
       <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 1000</li>
       <li class="pricing_feature">PDF Reports</li>
       <li class="pricing_feature">CSV Reports</li>
@@ -82,6 +84,7 @@
       <li class="pricing_price">€ 250 <span class="pricing_price_sm">/ Month</span></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature">Projects: 250</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> 250</li>
       <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 2500</li>
       <li class="pricing_feature">PDF Reports</li>
       <li class="pricing_feature">CSV Reports</li>
@@ -94,6 +97,7 @@
       <li class="pricing_price">€ 500 <span class="pricing_price_sm">/ Month</span></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature">Projects: 500</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> 500</li>
       <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 5000</li>
       <li class="pricing_feature">PDF Reports</li>
       <li class="pricing_feature">CSV Reports</li>
