BugFix for os count

--- a/app/views/organisations/plan.html.erb
+++ b/app/views/organisations/plan.html.erb
@@ -38,7 +38,7 @@
           <td>Open Source Projects:</td>
           <td><%= @organisation.plan.os_projects.to_i %></td>
           <td><%= os_project_count %></td>
-          <td><%= projects_remain %></td>
+          <td><%= os_remain %></td>
         </tr>
         <tr>
           <td>Components to sync:</td>
