--- a/app/assets/stylesheets/sprite.scss
+++ b/app/assets/stylesheets/sprite.scss
@@ -9,6 +9,8 @@ $html_url: "/assets/language/html.png";
 $coffeescript_url: "/assets/language/coffeescript.png";
 $chef_url: "/assets/language/chef.png";
 $rust_url: "/assets/language/rust.png";
+$go_url: "/assets/language/go.png";
+$elixir_url: "/assets/language/elixir.png";
 
 @mixin sprite($x, $y, $width, $height){
   background: url($sprite_url) $x $y no-repeat;
@@ -43,6 +45,22 @@ $rust_url: "/assets/language/rust.png";
 
 @mixin rust_icon($x, $y, $width, $height){
   background: url($rust_url) no-repeat;
+  display: inline-block;
+  vertical-align: middle;
+  width: $width;
+  height: $height;
+}
+
+@mixin go_icon($x, $y, $width, $height){
+  background: url($go_url) no-repeat;
+  display: inline-block;
+  vertical-align: middle;
+  width: $width;
+  height: $height;
+}
+
+@mixin elixir_icon($x, $y, $width, $height){
+  background: url($elixir_url) no-repeat;
   display: inline-block;
   vertical-align: middle;
   width: $width;
@@ -106,6 +124,18 @@ $rust_url: "/assets/language/rust.png";
   &.on { @include rust_icon($x2, $y2, $width, $height);}
   &:hover { @include rust_icon($x2, $y2, $width, $height);}
   &:active { @include rust_icon($x2, $y2, $width, $height);}
+}
+@mixin go_toggle($x1, $y1, $x2, $y2, $width, $height){
+  @include go_icon($x1, $y1, $width, $height);
+  &.on { @include go_icon($x2, $y2, $width, $height);}
+  &:hover { @include go_icon($x2, $y2, $width, $height);}
+  &:active { @include go_icon($x2, $y2, $width, $height);}
+}
+@mixin elixir_toggle($x1, $y1, $x2, $y2, $width, $height){
+  @include elixir_icon($x1, $y1, $width, $height);
+  &.on { @include elixir_icon($x2, $y2, $width, $height);}
+  &:hover { @include elixir_icon($x2, $y2, $width, $height);}
+  &:active { @include elixir_icon($x2, $y2, $width, $height);}
 }
 @mixin html_toggle($x1, $y1, $x2, $y2, $width, $height){
   @include html_icon($x1, $y1, $width, $height);
@@ -253,6 +283,20 @@ $rust_url: "/assets/language/rust.png";
 }
 
 .icon_rust_small_container{
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
+
+.icon_go_small_container{
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
+
+.icon_elixir_small_container{
   margin: 0;
   width: 30px;
   height: 30px;
@@ -462,6 +506,40 @@ $rust_url: "/assets/language/rust.png";
 }
 .icon_rust.small.on{
   background: url(/assets/language/rust_small.png) no-repeat;
+  margin: 0;
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+}
+
+.icon_go {
+  @include go_toggle(0px, 0px, 0px, 0px, 56px, 56px);
+}
+.icon_go_big_container{
+  padding: 0;
+  width: 56px;
+  height: 56px;
+  display: inline-block;
+}
+.icon_go.small.on{
+  background: url(/assets/language/go_small.png) no-repeat;
+  margin: 0;
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+}
+
+.icon_elixir {
+  @include elixir_toggle(0px, 0px, 0px, 0px, 56px, 56px);
+}
+.icon_elixir_big_container{
+  padding: 0;
+  width: 56px;
+  height: 56px;
+  display: inline-block;
+}
+.icon_elixir.small.on{
+  background: url(/assets/language/elixir_small.png) no-repeat;
   margin: 0;
   width: 25px;
   height: 25px;
