Add pages for Go lang

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,6 +20,7 @@
       "#{Project::A_TYPE_CHEF}"      => 'products/product_show_chef',
       "#{Project::A_TYPE_NUGET}"     => 'products/product_show_nuget',
       "#{Project::A_TYPE_CARGO}"     => 'products/product_show_crates',
+      "#{Project::A_TYPE_GODEP}"     => 'products/product_show_godep',
       "crates"                       => 'products/product_show_crates'
     } %>
 
