--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,6 +21,7 @@
       "#{Project::A_TYPE_NUGET}"     => 'products/product_show_nuget',
       "#{Project::A_TYPE_CARGO}"     => 'products/product_show_crates',
       "#{Project::A_TYPE_GODEP}"     => 'products/product_show_godep',
+      "#{Project::A_TYPE_HEX}"       => 'products/product_show_hex',
       "crates"                       => 'products/product_show_crates'
     } %>
 
